--- a/app/templates/base_result.html
+++ b/app/templates/base_result.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}JAR3D Results{% endblock %}
+{% block title %}
+{% if rfam_family|length > 0 %}
+JAR3D on {{ rfam_family }}
+{% else %}
+JAR3D Results
+{% endif %}
+{% endblock %}
 
 {% block page_subtitle %}
 {% endblock page_subtitle %}
@@ -9,7 +15,11 @@
 
 <div class='row' id='query-interpretation'>
   <div class="span12">
-  <h2>{{query_info.title}}</h2>
+  {% if pdb_count >= 0 %}
+    <h2><a href="https://rfam.org/family/{{ rfam_family }}">{{ query_info.title }}</a></h2>
+  {% else %}
+    <h2>{{ query_info.title }}</h2>
+  {% endif %}
     <h3>Input Summary</h3>
   </div>
     <div class="span8">
